cmake_minimum_required(VERSION 3.18)
project(health_microkernels LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(HEALTH_CHECKS_ENABLE_MPI "Build MPI-based microkernels" ON)
option(HEALTH_CHECKS_ENABLE_OPENMP "Build OpenMP offload microkernels" ON)
option(HEALTH_CHECKS_ENABLE_LEVEL_ZERO "Build Level Zero topology tool" OFF)

if(HEALTH_CHECKS_ENABLE_MPI)
  find_package(MPI QUIET)
  if(NOT MPI_FOUND)
    message(WARNING "MPI not found. MPI-dependent microkernels will be skipped.")
  endif()
endif()

if(HEALTH_CHECKS_ENABLE_OPENMP)
  find_package(OpenMP QUIET)
  if(NOT OpenMP_CXX_FOUND)
    message(WARNING "OpenMP not found. OpenMP-dependent microkernels will be skipped.")
  endif()
endif()

add_executable(mem_and_gpu_row memory_cpu_gpu_check/mem_and_gpu_row.cpp)
if(UNIX)
  target_link_libraries(mem_and_gpu_row PRIVATE dl)
endif()

if(MPI_FOUND)
  add_executable(simple_injection_bisection injection_bisection_tests/simple_injection_bisection.c)
  target_link_libraries(simple_injection_bisection PRIVATE MPI::MPI_C)

  add_executable(full_injection_bisection injection_bisection_tests/full_injection_bisection.c)
  target_link_libraries(full_injection_bisection PRIVATE MPI::MPI_C)

  if(OpenMP_CXX_FOUND)
    add_executable(triad compute_node_interconnects/triad.cpp)
    target_link_libraries(triad PRIVATE MPI::MPI_CXX OpenMP::OpenMP_CXX)

    add_executable(flops compute_node_interconnects/flops.cpp)
    target_link_libraries(flops PRIVATE MPI::MPI_CXX OpenMP::OpenMP_CXX)
  endif()
endif()

if(HEALTH_CHECKS_ENABLE_LEVEL_ZERO)
  find_path(LEVEL_ZERO_INCLUDE_DIR level_zero/ze_api.h)
  find_library(LEVEL_ZERO_LOADER ze_loader)

  if(LEVEL_ZERO_INCLUDE_DIR AND LEVEL_ZERO_LOADER)
    add_executable(topology compute_node_interconnects/topology.cpp)
    target_include_directories(topology PRIVATE ${LEVEL_ZERO_INCLUDE_DIR})
    target_link_libraries(topology PRIVATE ${LEVEL_ZERO_LOADER})
  else()
    message(WARNING "Level Zero headers/libs not found. topology target skipped.")
  endif()
endif()

install(TARGETS mem_and_gpu_row DESTINATION bin)
if(TARGET simple_injection_bisection)
  install(TARGETS simple_injection_bisection DESTINATION bin)
endif()
if(TARGET full_injection_bisection)
  install(TARGETS full_injection_bisection DESTINATION bin)
endif()
if(TARGET triad)
  install(TARGETS triad DESTINATION bin)
endif()
if(TARGET flops)
  install(TARGETS flops DESTINATION bin)
endif()
if(TARGET topology)
  install(TARGETS topology DESTINATION bin)
endif()
